# mobile_manipulator

./: MYLOG.TXT
manipulator_moveit_config/: README.MD  package.xml
manipulator_moveit_config/config/: manipulator_controllers.yaml  ur10.srdf  velocity_controller.yaml
manipulator_moveit_config/data/: README.MD  manipulator_state_controlled.txt  manipulator_state_desired.txt  manipulator_state_noise.txt  robot_state_pv.txt  single_joint_state.txt
manipulator_moveit_config/launch/: demo.launch  demo_gazebo.launch  fake_moveit_robot_model.launch  gazebo.launch  manipulator_gazebo.launch  manipulator_move.launch  manipulator_sub_state.launch  (+5 more)
mobile_base/: CMakeLists.txt  README.MD  package.xml
mobile_manipulator/: CMakeLists.txt  package.xml  setup.py
robot_description/: CMakeLists.txt  package.xml
robot_description/config/: manipulator_controllers.yaml  position_tra_controllers.yaml  ros_controllers_ns.yaml
robot_description/launch/: display_mm.launch  gazebo.launch  gazebo_ns.launch  manipulator_upload.launch  ros_controllers.launch  ros_controllers_ns.launch  test.launch
robot_description/scripts/: controller_test_py  data_ceshi.py
robot_description/src/: ceshi.cpp  manipulator_control.cpp  mm_move.cpp  temp.cpp
robot_description/urdf/: agv.sdf  agv.urdf.xacro  agv_ur10.urdf.xacro  common.gazebo.xacro  common_move_base.gazebo.xacro  manipulator.urdf.xacro  mm.transmission.xacro  mm_final.xacro  mm_ns.xacro  mobile_manipulator.urdf.xacro  move_robot.urdf.xacro  test.urdf  ur.gazebo.xacro  ur.transmission.xacro  ur10.urdf.xacro  ur10_joint_limited_robot.urdf.xacro
(+49 files in other folders)
